fix demo on smaller screens
The current demo's code block grows outside the viewport's width breaking the IntersectionObserver's behaviour. This CSS code constricts `.long-container`'s width to the viewport and adds minor style changes like a white background for contrast, identation for the demo code, and centering the demo's text.

Fixes #86

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,10 +1,11 @@
 .long-container {
-  height: 125vh;
+  height: 150vh;
+  max-width: 100%; // prevent container from overgrowing the viewport and breaking `IntersectionObserver` on smaller screens
 
   .intersection-box {
     border: 1px dotted black;
-    border-radius: 1px;
-    padding: 100px 4px 4px 4px;
+    padding: 50px 16px;
+    text-align: center;
   }
 }
 
